force-app/main/default/objects/Alert__c/Alert__c.object-meta.xml
<CustomObject>
    <description>This is used to track important alerts created by users for a given record.</description>
    <label>Alert</label>
    <nameField>
        <label>Title</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Alerts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>