force-app/main/default/objects/Alert__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <description>A detailed description of the Alert.</description>
    <inlineHelpText>Give the details about the Alert.</inlineHelpText>
    <label>Description</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>