force-app/main/default/objects/Alert__c/fields/Parent__c.field-meta.xml
<CustomField>
    <fullName>Parent__c</fullName>
    <description>Holds the sfdc record id of the Parent object. This is used as a fake way to setup a polymorphic lookup.</description>
    <externalId>true</externalId>
    <label>Parent</label>
    <length>18</length>
    <type>Text</type>
</CustomField>