force-app/main/default/objects/Alert__c/fields/Pinned__c.field-meta.xml
<CustomField>
    <fullName>Pinned__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used to pin alerts to the top of the alerts list.</description>
    <inlineHelpText>Pin this item to the top of the Alerts list.</inlineHelpText>
    <label>Pinned</label>
    <type>Checkbox</type>
</CustomField>