force-app/main/default/objects/Alert__c/fields/sObjectType__c.field-meta.xml
<CustomField>
    <fullName>sObjectType__c</fullName>
    <description>This mimics the standard sObjectType field lookup functionality. This is also set as an External Id so that it can be indexed.  Yay</description>
    <externalId>true</externalId>
    <label>sObjectType</label>
    <length>60</length>
    <type>Text</type>
</CustomField>